@startuml

title __RECIPE's Class Diagram__\n

  namespace be.kuleuven.travelrecipe {
    namespace models.recipe {
      class be.kuleuven.travelrecipe.models.recipe.AbstractDetailedRecipe {
          + setDetailNotifier()
      }
    }
  }
  

  namespace be.kuleuven.travelrecipe {
    namespace models.recipe {
      class be.kuleuven.travelrecipe.models.recipe.DetailedRecipe {
          - likeState : boolean
          - steps : List<RecipeStep>
          + DetailedRecipe()
          + getRecipeInfo()
          + getSteps()
          + isLikeState()
          + setLikeState()
          + setRecipeDemo()
          + setRecipeInfo()
          + setSteps()
      }
    }
  }
  

  namespace be.kuleuven.travelrecipe {
    namespace models.recipe {
      class be.kuleuven.travelrecipe.models.recipe.RecipeInfo {
          {static} + CREATOR : Creator<RecipeInfo>
          - country : int
          - countryname : String
          - demo : Bitmap
          - description : String
          - ingredients : List<RecipeIngredient>
          - name : String
          - recipeId : int
          + RecipeInfo()
          + RecipeInfo()
          + RecipeInfo()
          + RecipeInfo()
          + addIngredients()
          + describeContents()
          + getCountry()
          + getCountryname()
          + getDemo()
          + getDescription()
          + getIngredients()
          + getName()
          + getRecipeId()
          + setCountry()
          + setCountryname()
          + setDemo()
          + setDescription()
          + setIngredients()
          + setName()
          + setRecipeId()
          + writeToParcel()
          # RecipeInfo()
      }
    }
  }
  

  namespace be.kuleuven.travelrecipe {
    namespace models.recipe {
      class be.kuleuven.travelrecipe.models.recipe.RecipeIngredient {
          {static} + CREATOR : Creator<RecipeIngredient>
          - amount : String
          - name : String
          + RecipeIngredient()
          + describeContents()
          + getAmount()
          + getName()
          + setAmount()
          + setName()
          + writeToParcel()
          # RecipeIngredient()
      }
    }
  }
  

  namespace be.kuleuven.travelrecipe {
    namespace models.recipe {
      class be.kuleuven.travelrecipe.models.recipe.RecipeStep {
          - stepDesc : String
          - stepImg : Bitmap
          - stepNr : String
          + RecipeStep()
          + RecipeStep()
          + getStepDesc()
          + getStepImg()
          + getStepNr()
          + setStepDesc()
          + setStepImg()
          + setStepNr()
      }
    }
  }
  

  be.kuleuven.travelrecipe.models.recipe.AbstractDetailedRecipe o-- be.kuleuven.travelrecipe.notifier.DetailNotifier : detailNotifier
  be.kuleuven.travelrecipe.models.recipe.DetailedRecipe -up-|> be.kuleuven.travelrecipe.models.recipe.AbstractDetailedRecipe
  be.kuleuven.travelrecipe.models.recipe.DetailedRecipe o-- be.kuleuven.travelrecipe.models.recipe.RecipeInfo : recipeInfo
  be.kuleuven.travelrecipe.models.recipe.RecipeInfo .up.|> android.os.Parcelable
  be.kuleuven.travelrecipe.models.recipe.RecipeIngredient .up.|> android.os.Parcelable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
